<resources>
    <string name="app_name">Wolenje Africa</string>
    <string name="Link_Accoount">Link Accoount</string>
    <string name="app_intro">Wolenje, Lipa kwa urahisi</string>
    <string name="button_intro">Get Started</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="please_lift_and_rest_your_finger">please lift and rest your finger</string>
    <string name="Continue">Continue</string>
    <string name="Save_and_Continue">Save ben &amp;amp Continue; angie</string>
    <string name="skip_for_now">Skip For Now</string>
    <string name="bank_account">Bank Account</string>
    <string name="international_card">International Card</string>
    <string name="billers">Billers</string>
    <string name="referrals">Referrals</string>
    <string name="payments">Payments</string>
    <string name="my_wallet">My Wallet</string>
    <string name="settings">Settings</string>
    <string name="my_account">My Account</string>
    <string name="Wallet">wallet</string>
    <string name="value_add">value_add</string>
    <string name="saved_billers">Saved Billers</string>
    <string name="purchase_airtime">Purchase airtime</string>
    <string name="electricity">Electricity</string>
    <string name="pay_internet">Pay Internet</string>
    <string name="transfer">Transfer</string>
    <string name="income_details">Income Details</string>
    <string name="wallet">Wallet</string>
    <string name="services">Services</string>
    <string name="exchange">Exchange</string>
    <string name="crypto">Crypto</string>
    <string name="Open_drawer">Open Drawer</string>
    <string name="Close_drawer">Closed Drawer</string>
    <string name="_0725_000_000">0725 000 000</string>
    <string name="mr_mof">Mr_mof</string>
    <string name="current_balance">Current Balance</string>
    <string name="_7800_00">$7800.00</string>
    <string name="my_e_wallet">My E-Wallet</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="recent_transfer">Recent Transfer</string>
    <string name="add_new">ADD NEW</string>
    <string name="no_transfers">NO TRANSFERS</string>
    <string name="quick_services">Quick Services</string>
    <string name="view_all">View All</string>
    <string name="buy_airtime">Buy Airtime</string>
    <string name="transfers">Transfers</string>
    <string name="loans">Loans</string>
    <string name="you_have_spent_this_month">You have spent this month</string>
    <string name="_5670">$5670</string>
    <string name="transfer_to_wallet">Transfer to Wallet</string>
    <string name="transfer_to_bank">Transfer to Bank</string>
    <string name="transfer_to_phone">Transfer to Phone</string>
    <string-array name="user_select">
        <item>Select User</item>
        <item>Single User</item>
        <item>Multiple Users</item>
    </string-array>
    <string-array name="Select_number">
        <item>My Number</item>
        <item>Other Number</item>
    </string-array>
    <string-array name="gender_array">
        <item> Male </item>
        <item> Female </item>
        <item> Other </item>
    </string-array>
    <string-array name="bill_products">
        <item> MPESA_B2C </item>
        <item> TKASH_B2C </item>
        <item> AIRTEL_B2C </item>
        <item>KPLC_BILLPAY</item>
        <item>ZUKU_BILLPAY </item>
        <item>NCWSC_BILLPAY</item>
        <item>KIWASCO_BILLPAY</item>
    </string-array>
    <string-array name="tv_service_products">
        <item>ZUKU PayBill</item>
        <item>STARTIMES PayBill</item>
        <item>DSTV PayBill</item>
        <item> GOTV PayBill</item>
    </string-array>
    <string-array name="wallet_top_up_services">
        <item>Safaricom</item>
        <item>Airtel</item>
        <item>Telkom</item>
    </string-array>
    <string-array name="select_bank">
        <item>Equity Bank</item>
        <item>Barclays Bank</item>
        <item>CfC Stanbic Bank</item>
        <item>Co-operative Bank</item>
        <item>Chase Bank</item>
        <item>Citibank</item>
    </string-array>
    <string-array name="select_bank_branch">
        <item>Awendo Branch</item>
        <item>Bomet Branch</item>
        <item>Bondo Branch</item>
        <item>Bungoma Branch</item>
        <item>Corporate Branch</item>
        <item>Eldoret Branch</item>
    </string-array>
    <string-array name="select_county">
        <item>Select County</item>
        <item>Mombasa</item>
        <item>Kwale</item>
        <item>Kilifi</item>
        <item>Tana River</item>
        <item>Lamu</item>
        <item>Taita Taveta</item>
        <item>Garissa</item>
        <item>Wajir</item>
        <item>Mandera</item>
        <item>Marsabit</item>
        <item>Isiolo</item>
        <item>Meru</item>
        <item>Tharaka Nithi</item>
        <item>Embu</item>
        <item>Kitui</item>
        <item>Machakos</item>
        <item>Makueni</item>
        <item>Nyandarua</item>
        <item>Nyeri</item>
        <item>Kirinyaga</item>
        <item>Muranga</item>
        <item>Kiambu</item>
        <item>Turkana</item>
        <item>West Pokot</item>
        <item>Samburu</item>
        <item>Trans Nzoia</item>
        <item>Uasin Gishu</item>
        <item>Elgeyo Marakwet</item>
        <item>Nandi</item>
        <item>Baringo</item>
        <item>Laikipia</item>
        <item>Nakuru</item>
        <item>Narok</item>
        <item>Kajiado</item>
        <item>Kericho</item>
        <item>Bomet</item>
        <item>Kakamega</item>
        <item>Vihanga</item>
        <item>Bungoma</item>
        <item>Busia</item>
        <item>Siaya</item>
        <item>Kisumu</item>
        <item>Homa Bay</item>
        <item>Migori</item>
        <item>Kisii</item>
        <item>Nyamira</item>
        <item>Nairobi</item>
    </string-array>
    <string-array name="select_School">
        <item>Select School</item>
    </string-array>
    <string-array name="select_fee_details">
        <item>Fee Details</item>
    </string-array>
    <string-array name="loanUseOfFunds">
        <item>Use of Funds</item>
        <item>Working Capital </item>
        <item>Purchase of Equipment</item>
        <item>LPO Financing </item>
        <item>Salary Advance</item>
        <item></item>Other
    </string-array>
    <string-array name="select_phone">
        <item>Wallet</item>
    </string-array>
    <string name="login"><font color="#531edc">Log in</font></string>
    <string name="registration">Registration</string>
    <string name="please_enter_your_mobile_number_then_we_will_send_otp_to_verify">Please enter your mobile number,\nthen we will send OTP to verify</string>
    <string name="bill_manager">Bill Manager</string>
    <string name="all">All</string>
    <string name="unpaid">Unpaid</string>
    <string name="paid">Paid</string>
    <string name="kenya_number"><b><font color="#000000"></font>  KEN   |   725 000 000</b></string>
    <string name="mail_text"><b><font color="#000000"></font>  Email address</b></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="my_e_wallets">My E-wallet</string>
    <string name="biling">Biling</string>
    <string name="reports">Reports</string>
    <string name="learning_hub">Learning Hub</string>
    <string name="notifications">Notifications</string>
    <string name="switch_account">Switch Account</string>
    <string name="register_new_member">Register new member</string>
    <string name="security">SECURITY</string>
    <string name="password_pin">Password / Pin</string>
    <string name="profile">Profile</string>
    <string name="unlock_wallet">Unlock wallet</string>
    <string name="notificationsset">Notifications</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_title">Contacts</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>
    <string name="try_again">Try Again</string>
    <string name="transfer_unsuccessful">Transfer Unsuccessful !</string>
    <string name="reference_number">Reference number</string>
    <string name="b3423424234">#B3423424234</string>
    <string name="amount_sent">Amount sent</string>
    <string name="_0_00">0.00</string>
    <string name="contacts">Contacts</string>
    <string name="other_number">Other Number</string>
    <string name="select_recipient">Select Recipient</string>
    <string name="top_up">Top-Up</string>
    <string name="balance">Balance</string>
    <string name="step_01_of_03">Step 01 of 03</string>
    <string name="save_amp_continue"><![CDATA[Save & Continue]]></string>
    <string name="save_amp_exit"><![CDATA[Save & Exit]]></string>
    <string name="todo">TODO</string>
    <string name="if_one_both_are_parents_dead_please_attach_death_certificate">If one/both are parents dead, please attach death certificate</string>
    <string name="upload_attachment">Upload attachment</string>
    <string name="both_parents_dead">Both Parents Dead</string>
    <string name="one_parent_alive">One Parent Alive</string>
    <string name="both_parents_alive">Both Parents Alive</string>
    <string name="parent_status">Parent Status:</string>
    <string name="student_information">Student Information</string>
    <string name="student_s_name">Student’s Name</string>
    <string name="enter">Enter</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="select">Select</string>
    <string name="_05_10_2000">05/10/2000</string>
    <string name="state_any_special_need_if_any">State any special need (if any)</string>
    <string name="step_02_of_03">step_02_of_03</string>
    <string name="tlc">By clicking “Continue you agree to our <b><u><a href="https://dakarenergylimited.co.ke/Leaf/"><font color="#249af3"> Terms and conditions </font></a></u></b> as well as our <b><u><a href="https://dakarenergylimited.co.ke/Leaf/"><font color="#249af3">privacy policy</font></a></u></b>  </string>
    <string name="loyalty_program">Loyalty Program</string>
    <string name="flight_information">Flight Information</string>
    <string name="emirates_airlines">Emirates Airlines</string>
    <string name="_8h_12m_1_stop">8h 12m (1 Stop)</string>
    <string name="usd_643">USD 643</string>
    <string name="btncancel">Cancel</string>
    <string name="search">Search</string>
    <string name="getting_started">Getting Started</string>
    <string name="account_and_payment">Account and Payment</string>
    <string name="legal_and_privacy_policy">Legal and Privacy Policy</string>
    <string name="follow_us">Follow Us</string>
    <string name="account">Account</string>
    <string name="repurchase_report">Repurchase Report</string>
    <string name="support">Support</string>
    <string name="need_support">Need Support?</string>
    <string name="i_can_t_login_to_the_merchant">I can’t login to the merchant</string>
    <string name="partial_scholarship">Partial scholarship</string>
    <string name="learning_hub3">Learning Hub</string>
    <string name="smeplaceholder">SME targeted interventions placeholder text commonly used in print</string>
</resources>