<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_home_two"
            android:icon="@drawable/ic_homeh"
            android:title="@string/home"

            />
        <item
            android:id="@+id/my_e_wallet_home_two"
            android:icon="@drawable/ic_profile"
            android:onClick="OpenWalletMHome2"
            android:title="@string/my_e_wallets"

            />
        <item
            android:id="@+id/billing_home_two"
            android:icon="@drawable/ic_receipt_list_43"
            android:title="Bulk Payment"

            />
        <item
            android:id="@+id/services_home_two"
            android:icon="@drawable/ic_walleth"
            android:title="@string/services" />

        <item
            android:id="@+id/income_nav_home_two"
            android:icon="@drawable/ic_incomed"
            android:title="@string/income_details"

            />
        <item
            android:id="@+id/reports_home_two"
            android:icon="@drawable/ic_reports"
            android:title="@string/reports"

            />
        <item
            android:id="@+id/learn_hub_home_two"
            android:icon="@drawable/ic_fill_1"
            android:title="@string/learning_hub"

            />
        <item
            android:id="@+id/profile_home_two"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/not_home_two"
            android:icon="@drawable/ic_notification"
            android:title="@string/notifications" />
        <item
            android:id="@+id/settings_nav_home_two"
            android:icon="@drawable/ic_settingsh"
            android:title="@string/settings" />
        <item
            android:id="@+id/switch_account_nav_home_two"
            android:icon="@drawable/ic_switchaccount"
            android:title="@string/switch_account" />
        <item
            android:title="Logout" />


    </group>


</menu>