<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:fontFamily="@font/poppins_regular"
            android:icon="@drawable/ic_homeh" />
        <item
            android:id="@+id/menu_e_wallet"
            android:title="My E-Wallet"
            android:fontFamily="@font/poppins_regular"
            android:icon="@drawable/ic_my_e_walonje"
            android:onClick="OpenWalletM"

            />
        <item
            android:id="@+id/biling"
            android:title="@string/biling"
            android:fontFamily="@font/poppins_regular"
            android:icon="@drawable/ic_receipt_list_43"
            android:onClick="openBillManager"

            />
        <item
            android:id="@+id/services"
            android:title="@string/services"
            android:fontFamily="@font/poppins_regular"
            android:icon="@drawable/ic_walleth"
            android:onClick="opensevrvices"

            />
        <item
            android:id="@+id/referrals"
            android:title="@string/loyalty_program"
            android:icon="@mipmap/group3"
            android:onClick="openreferalls"
            android:fontFamily="@font/poppins_regular"

            />
        <item
            android:id="@+id/income"
            android:title="@string/income_details"
            android:icon="@drawable/ic_incomed"
            android:onClick="openIncomingDetails"
            android:fontFamily="@font/poppins_regular"

            />
        <item
            android:id="@+id/repor"
            android:title="@string/reports"
            android:icon="@drawable/ic_reports"
            android:fontFamily="@font/poppins_regular"
            android:onClick="openHistory"
            />
        <item
            android:id="@+id/lernhub"
            android:title="@string/learning_hub"
            android:icon="@drawable/ic_fill_1"
            android:fontFamily="@font/poppins_regular"
            android:onClick="openLearningHub"

            />
        <item
            android:id="@+id/profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_profile"
            android:fontFamily="@font/poppins_regular"
            android:onClick="openProfile"

            />
        <item
            android:id="@+id/not"
            android:title="@string/notifications"
            android:icon="@drawable/ic_notification"
            android:onClick="openNotifications52"
            android:fontFamily="@font/poppins_regular"

            />
        <item
            android:id="@+id/settings"
            android:title="@string/settings"
            android:fontFamily="@font/poppins_regular"
            android:icon="@drawable/ic_settingsh"
            android:onClick="movetoSettings48"

            />
        <item
            android:id="@+id/swacc"
            android:title="@string/switch_account"
            android:icon="@drawable/ic_switchaccount"
            android:fontFamily="@font/poppins_regular"
            android:onClick="chooseAnotherAccount"

            />
        <item
            android:id="@+id/fav"
            android:title="@string/register_new_member"
            android:icon="@mipmap/favorites_2"
            android:fontFamily="@font/poppins_regular"
            android:onClick="registerNewNumber"

            />
        <item
            android:id="@+id/logout"
            android:title="logout"
            android:fontFamily="@font/poppins_regular"
            android:onClick="LogoutAccount"
            />



    </group>




</menu>