<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Scholarship02"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:background="#0bb8bb"
        android:id="@+id/top"
        >
        <include layout="@layout/toolbarscholarshipapplication"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"
            android:lineSpacingExtra="6sp"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/step_01_of_03"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/indicator"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="#f8f8fa"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/colorMidnight"
                    android:text="@string/student_information"
                    android:id="@+id/stdinformation"
                    android:layout_marginVertical="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/blue_grey"
                    android:letterSpacing="0.03"
                    android:lineSpacingExtra="2sp"
                    android:text="@string/student_s_name"
                    android:layout_below="@id/stdinformation"
                    android:id="@+id/stdname"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginTop="16dp"
                    android:paddingStart="18dp"
                    android:background="@drawable/textviewborder"
                    android:hint="@string/enter"
                    android:layout_below="@id/stdname"
                    android:id="@+id/stdnameedit"
                    android:layout_marginBottom="14dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/studtextviewholder"
                    android:layout_below="@id/stdnameedit"
                    >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/blue_grey"
                        android:letterSpacing="0.03"
                        android:lineSpacingExtra="2sp"
                        android:text="@string/gender"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/blue_grey"
                        android:letterSpacing="0.03"
                        android:lineSpacingExtra="2sp"
                        android:text="@string/date_of_birth"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/generentery"
                    android:layout_below="@id/studtextviewholder"
                    android:layout_marginBottom="12dp"
                    >
                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="58dp"
                        android:layout_marginTop="16dp"
                        android:paddingHorizontal="18dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/select"
                        android:backgroundTint="@color/colorWhite"
                        android:textAlignment="viewStart"
                        android:textColor="@color/blue_grey"
                        android:drawableEnd="@drawable/ic_dropdown_arrow"
                        app:strokeColor="#E7E7E7"
                        app:strokeWidth="1dp"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        />
                    <EditText
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="52dp"
                        android:layout_marginTop="16dp"
                        android:paddingStart="18dp"
                        android:background="@drawable/textviewborder"
                        android:hint="@string/_05_10_2000"
                        android:paddingHorizontal="18dp"
                        android:drawableEnd="@drawable/calender_date"

                        />
                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/blue_grey"
                    android:letterSpacing="0.03"
                    android:lineSpacingExtra="2sp"
                    android:text="@string/state_any_special_need_if_any"
                    android:layout_below="@id/generentery"
                    android:id="@+id/specialneed"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginTop="16dp"
                    android:paddingStart="18dp"
                    android:background="@drawable/textviewborder"
                    android:hint="Enter details"

                    android:layout_below="@id/specialneed"
                    />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:paddingHorizontal="16dp"
                android:background="#ebebf1"
                android:layout_marginVertical="24dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/colorMidnight"
                    android:layout_centerVertical="true"
                    android:text="Parent/Guardian Info"
                    />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/blue_grey"
                android:letterSpacing="0.03"
                android:lineSpacingExtra="2sp"
                android:text="Parent/Guardian Name"
                android:layout_marginHorizontal="16dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="16dp"
                android:paddingStart="18dp"
                android:background="@drawable/textviewborder"
                android:hint="Enter"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="10dp"
               />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/blue_grey"
                android:letterSpacing="0.03"
                android:lineSpacingExtra="2sp"
                android:text="Mobile Number"
                android:layout_marginHorizontal="16dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="16dp"
                android:paddingStart="18dp"
                android:background="@drawable/textviewborder"
                android:hint=" KEN | Enter No"
                android:drawableStart="@mipmap/kenyaflag"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/blue_grey"
                android:letterSpacing="0.03"
                android:lineSpacingExtra="2sp"
                android:text="Occupation/Proffesion"
                android:layout_marginHorizontal="16dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="16dp"
                android:paddingStart="18dp"
                android:background="@drawable/textviewborder"
                android:hint="@string/enter"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/colorMidnight"
                android:letterSpacing="0.03"
                android:lineSpacingExtra="2sp"
                android:text="@string/parent_status"
                android:layout_marginHorizontal="16dp"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                >
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/both_parents_alive"
                    android:layout_alignParentStart="true"
                    android:id="@+id/select1"
                    />
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one_parent_alive"
                    android:layout_alignParentEnd="true"
                    />
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/both_parents_dead"
                    android:layout_below="@id/select1"
                    android:id="@+id/select3"
                    />


            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/blue_grey"
                    android:id="@+id/view1"
                    android:layout_marginBottom="24dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="#9c7bfc"
                    android:lineSpacingExtra="7sp"
                    android:text="@string/upload_attachment"
                    android:layout_below="@id/view1"
                    android:id="@+id/upattach"
                    android:layout_marginStart="16dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="#222b45"
                    android:lineSpacingExtra="6sp"
                    android:textAlignment="center"
                    android:text="@string/if_one_both_are_parents_dead_please_attach_death_certificate"
                    android:layout_below="@id/upattach"
                    android:layout_alignParentStart="true"
                    android:id="@+id/exptext"
                    android:layout_marginStart="16dp"
                    />
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/upattach"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_baseline_attach_file_24"
                    android:background="@android:color/transparent"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/todo" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/blue_grey"
                    android:layout_below="@id/exptext"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="32dp"
                    />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:paddingHorizontal="24dp"
    >
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_weight="1"
        android:text="@string/save_amp_exit"
        android:backgroundTint="@color/gray4"
        android:textAllCaps="false"
        android:layout_marginEnd="5dp"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_weight="1"
        android:textAllCaps="false"
        android:text="@string/save_amp_continue"
        android:backgroundTint="@color/colorAccent"
        android:onClick="movetostage2"
        />
</LinearLayout>

</LinearLayout>